# reverse-engineering

./: G2E4_decompiled.c  G2E4_disassembly.txt  G2E4_entrypoint.c  G2E4_full_analysis.json  G2E4_program_analysis.json  G2E4_re_analysis.json  G2E4eoenFMirpFKRfHNo2koDP7mrhnNWVwxyHASSpjQD.json  README.md  extract_pubkeys.py  identify_programs.py  re_analyze.py
reconstructed-source/: Anchor.toml  Cargo.toml
reconstructed-source/programs/arb-bot/: Cargo.toml
reconstructed-source/programs/arb-bot/src/: lib.rs  processor.rs  state.rs
reconstructed-source/programs/arb-bot/src/cpi/: mod.rs  system.rs
reconstructed-source/programs/arb-bot/src/extension/: mod.rs
