[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arb_bot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31"
anchor-spl = { version = "0.31", features = ["token", "token_2022", "associated_token"] }
solana-program = "2.1"
spl-token = "7"
spl-token-2022 = "6"
